crates/privacy-pools-sdk/tests/ui/verified_proof_prepared_conversion.rs
use privacy_pools_sdk::PreparedTransactionExecution;

fn value<T>() -> T {
    panic!("compile-fail placeholder")
}

fn main() {
    let prepared: PreparedTransactionExecution = value();
    let _ = prepared.preflighted_transaction();
    let _ = prepared.into_preflighted_transaction();
}
